--- a/argocd/examples/niv-project-1/application-set.yaml
+++ b/argocd/examples/niv-project-1/application-set.yaml
@@ -4,6 +4,8 @@ metadata:
   name: application-set-niv-project-1
   namespace: argocd
 spec:
+  goTemplate: true
+  goTemplateOptions: [ "missingkey=error" ]
   generators:
     - git:
         repoURL: https://github.com/nivin/gitops-poc.git
