--- a/argocd/examples/niv-project-1/service-2/deploy.yaml
+++ b/argocd/examples/niv-project-1/service-2/deploy.yaml
@@ -13,7 +13,7 @@ spec:
         app: service-2
     spec:
       containers:
-        - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
+        - image: ghcr.io/stefanprodan/podinfo:6.5.4
           name: service-2
           ports:
             - containerPort: 80
