--- a/argocd/examples/app/mock-campaign-service/svc.yaml
+++ b/argocd/examples/app/mock-campaign-service/svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: service-2
+  name: mock-campaign-service
 spec:
   ports:
     - port: 80
       targetPort: 80
   selector:
-    app: service-2
+    app: mock-campaign-service
