--- a/argocd/examples/app/application-set.yaml
+++ b/argocd/examples/app/application-set.yaml
@@ -6,6 +6,9 @@ metadata:
 spec:
   goTemplate: true
   goTemplateOptions: [ "missingkey=error" ]
+  ignoreApplicationDifferences:
+    - jsonPointers:
+        - /spec/syncPolicy
   generators:
     - git:
         repoURL: https://github.com/nivin/gitops-poc.git
