--- a/argocd/examples/devops/application-set.yaml
+++ b/argocd/examples/devops/application-set.yaml
@@ -6,6 +6,9 @@ metadata:
 spec:
   goTemplate: true
   goTemplateOptions: [ "missingkey=error" ]
+  ignoreApplicationDifferences:
+    - jsonPointers:
+        - /spec/syncPolicy
   generators:
     - git:
         repoURL: https://github.com/nivin/gitops-poc.git
@@ -26,6 +29,6 @@ spec:
         namespace: 'argo-poc-devops'
       syncPolicy:
         automated:
-          selfHeal: false
+          selfHeal: true
         syncOptions:
           - CreateNamespace=true
